Adição do padrão cqrs

--- a/BlueProject.Business/BlueProject.Business.csproj
+++ b/BlueProject.Business/BlueProject.Business.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
+    <PackageReference Include="MediatR" Version="11.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\BlueProject.Infra\BlueProject.Infra.csproj" />
+  </ItemGroup>
+
 </Project>
